k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  clusterIP: None
  selector: { app: mongodb }
  ports:
    - port: 27017
      targetPort: 27017
